# WorldState

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  go.mod  go.sum
backend/cmd/server/: main.go
backend/internal/api/: handlers.go  health.go  ingestion.go  router.go
backend/internal/config/: config.go  config_test.go
backend/internal/database/: assets.go  cascading_risks.go  events_entities.go  normalization_test.go  postgres.go  redis.go  relationships.go  risks.go  sources_documents.go  worldstate_intelligence.go
backend/internal/messaging/: nats.go  (+1 more)
backend/migrations/: 001_create_sources.sql  002_create_documents.sql  003_create_events.sql  004_create_entities.sql  005_create_relationships.sql  006_create_risks.sql  007_create_world_state.sql  008_create_intelligence.sql  009_create_asset_prices.sql  010_create_cascading_risks.sql
docs/: ARCHITECTURE.md  CONTRIBUTING.md  DATA_MODEL.md  ROADMAP.md  SETUP.md
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json
infrastructure/nats/: nats-server.conf
infrastructure/postgres/: Dockerfile  init.sql  seed_entities.sql  sync_graph.sql
python/: Dockerfile  pyproject.toml
python/src/worldstate_ai/: __init__.py  config.py  ingestion.py  main.py  worker.py
python/src/worldstate_ai/models/: __init__.py
python/src/worldstate_ai/services/: consensus_agent.py  entity_extraction.py  event_extraction.py  gap_enricher.py  gemini_client.py  global_analyzer.py  graph_reasoning.py  relationship_extraction.py
python/tests/: test_extraction.py  test_ingestion.py
(+20 files in other folders)
